--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   box-sizing: border-box;
-  max-width: 1440px;
   margin: 0;
+  max-width: 1440px;
   padding: 0;
   width: 100%
 }
@@ -22,8 +22,8 @@ body {
 }
 
 .title-idea {
-font-size: 32px;
-color: #00A79D;
+  font-size: 32px;
+  color: #00A79D;
 }
 
 .title-box {
@@ -84,10 +84,10 @@ color: #00A79D;
 }
 
 .cards-container {
-  height: 100%;
-  width: 50%;
-  margin:0 auto;
   background-color: #FFFFFF;
+  height: 100%;
+  margin:0 auto;
+  width: 50%;
 }
 
 .new-idea {
@@ -96,8 +96,8 @@ color: #00A79D;
 }
 
 .idea-head {
-  color: #6D6E71;
   align-items: center;
+  color: #6D6E71;
   display: flex;
   flex-direction: row;
   font-size: 1.5rem;
@@ -124,6 +124,7 @@ color: #00A79D;
 }
 
 li {
+  border-bottom: 1px solid #D1D3D4;
   list-style-type: none;
 }
 
