--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   font-size: 1.5em;
   height: 30px;
   margin-bottom: 20px;
+  /*padding-left: .5rem;*/
   width: 99.5%;
 }
 
@@ -99,6 +100,7 @@ body {
   align-items: center;
   color: #6D6E71;
   display: flex;
+  font-family: 'Roboto Slab', serif;
   flex-direction: row;
   font-size: 1.5rem;
   justify-content: space-between;
@@ -111,8 +113,11 @@ body {
 
 .idea-body {
   color: #939598;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.3rem;
+  height: 7vh;
   margin: .5rem 0;
+  overflow: scroll;
 }
 
 .idea-foot {
@@ -134,7 +139,7 @@ li {
 }
 
 .buttons {
-  width: 2vw;
+  width: 2.5vw;
 }
 
 .delete-button:hover {
@@ -147,6 +152,7 @@ li {
 
 .down-vote {
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .down-vote:hover {
@@ -156,9 +162,11 @@ li {
 .quality-judgment {
   color: #6D6E71;
   padding-left: 1rem;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .quality-title {
+  font-family: 'Roboto Slab', serif;
   font-weight: 700;
 }
 
